--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -3,114 +3,44 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gluestack-ui/actionsheet": [
-        "../../packages/actionsheet/src"
-      ],
-      "@gluestack-ui/avatar": [
-        "../../packages/avatar/src"
-      ],
-      "@gluestack-ui/button": [
-        "../../packages/button/src"
-      ],
-      "@gluestack-ui/center": [
-        "../../packages/center/src"
-      ],
-      "@gluestack-ui/checkbox": [
-        "../../packages/checkbox/src"
-      ],
-      "@gluestack-ui/divider": [
-        "../../packages/divider/src"
-      ],
-      "@gluestack-ui/heading": [
-        "../../packages/heading/src"
-      ],
-      "@gluestack-ui/hstack": [
-        "../../packages/hstack/src"
-      ],
-      "@gluestack-ui/icon-button": [
-        "../../packages/icon-buttonl/src"
-      ],
-      "@gluestack-ui/icon": [
-        "../../packages/icon/src"
-      ],
+      "@gluestack-ui/actionsheet": ["../../packages/actionsheet/src"],
+      "@gluestack-ui/avatar": ["../../packages/avatar/src"],
+      "@gluestack-ui/button": ["../../packages/button/src"],
+      "@gluestack-ui/center": ["../../packages/center/src"],
+      "@gluestack-ui/checkbox": ["../../packages/checkbox/src"],
+      "@gluestack-ui/divider": ["../../packages/divider/src"],
+      "@gluestack-ui/heading": ["../../packages/heading/src"],
+      "@gluestack-ui/hstack": ["../../packages/hstack/src"],
+      "@gluestack-ui/icon-button": ["../../packages/icon-buttonl/src"],
+      "@gluestack-ui/icon": ["../../packages/icon/src"],
       // "@gluestack/popper": ["../popper/src/index"],
       // "@gluestack/ui": ["../ui/src/index"],
       // "@gluestack/ui-lucide-icons": ["../ui/lucide-icons/src/"],
-      "@gluestack/ui": [
-        "../../packages/button/src"
-      ],
-      "@gluestack-ui/tooltip": [
-        "../../packages/tooltip/src"
-      ],
-      "@gluestack-ui/popover": [
-        "../../packages/popover/src"
-      ],
-      "@gluestack-ui/provider": [
-        "../../packages/provider/src"
-      ],
-      "@gluestack-ui/textarea": [
-        "../../packages/textarea/src"
-      ],
-      "@gluestack-ui/input": [
-        "../../packages/input/src"
-      ],
-      "@gluestack-ui/switch": [
-        "../../packages/switch/src"
-      ],
-      "@gluestack-ui/radio": [
-        "../../packages/radio/src"
-      ],
-      "@gluestack-ui/spinner": [
-        "../../packages/spinner/src"
-      ],
-      "@gluestack-ui/slider": [
-        "../../packages/slider/src"
-      ],
-      "@gluestack-ui/link": [
-        "../../packages/link/src"
-      ],
-      "@gluestack-ui/progress": [
-        "../../packages/progress/src"
-      ],
-      "@gluestack-ui/menu": [
-        "../../packages/menu/src"
-      ],
-      "@gluestack-ui/select": [
-        "../../packages/select/src"
-      ],
-      "@gluestack-ui/modal": [
-        "../../packages/modal/src"
-      ],
-      "@gluestack-ui/fab": [
-        "../../packages/fab/src"
-      ],
-      "@gluestack-ui/toast": [
-        "../../packages/toast/src"
-      ],
-      "@gluestack-ui/alert-dialog": [
-        "../../packages/alert-dialog/src"
-      ],
-      "@gluestack-ui/alert": [
-        "../../packages/alert/src"
-      ],
-      "@gluestack-ui/form-control": [
-        "../../packages/form-control/src"
-      ],
-      "@gluestack-ui/tabs": [
-        "../../packages/tabs/src"
-      ],
-      "@gluestack-ui/floating-ui": [
-        "../../packages/floating-ui/src"
-      ],
-      "@gluestack-ui/overlay": [
-        "../../packages/overlay/src"
-      ],
-      "@gluestack-ui/stack": [
-        "../../packages/stack/src"
-      ],
-      "@gluestack-ui/vstack": [
-        "../../packages/vstack/src"
-      ]
+      "@gluestack/ui": ["../../packages/button/src"],
+      "@gluestack-ui/tooltip": ["../../packages/tooltip/src"],
+      "@gluestack-ui/popover": ["../../packages/popover/src"],
+      "@gluestack-ui/provider": ["../../packages/provider/src"],
+      "@gluestack-ui/textarea": ["../../packages/textarea/src"],
+      "@gluestack-ui/input": ["../../packages/input/src"],
+      "@gluestack-ui/switch": ["../../packages/switch/src"],
+      "@gluestack-ui/radio": ["../../packages/radio/src"],
+      "@gluestack-ui/spinner": ["../../packages/spinner/src"],
+      "@gluestack-ui/slider": ["../../packages/slider/src"],
+      "@gluestack-ui/link": ["../../packages/link/src"],
+      "@gluestack-ui/progress": ["../../packages/progress/src"],
+      "@gluestack-ui/menu": ["../../packages/menu/src"],
+      "@gluestack-ui/select": ["../../packages/select/src"],
+      "@gluestack-ui/modal": ["../../packages/modal/src"],
+      "@gluestack-ui/fab": ["../../packages/fab/src"],
+      "@gluestack-ui/toast": ["../../packages/toast/src"],
+      "@gluestack-ui/alert-dialog": ["../../packages/alert-dialog/src"],
+      "@gluestack-ui/alert": ["../../packages/alert/src"],
+      "@gluestack-ui/form-control": ["../../packages/form-control/src"],
+      "@gluestack-ui/tabs": ["../../packages/tabs/src"],
+
+      "@gluestack-ui/overlay": ["../../packages/overlay/src"],
+      "@gluestack-ui/stack": ["../../packages/stack/src"],
+      "@gluestack-ui/vstack": ["../../packages/vstack/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
@@ -121,10 +51,7 @@
     "importsNotUsedAsValues": "error",
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -138,12 +65,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": [
-    "lib",
-    "node_modules",
-    "storybookDocsComponents"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["lib", "node_modules", "storybookDocsComponents"],
+  "include": ["src"]
 }
