--- a/icon/package.json
+++ b/icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/icon",
-  "version": "0.1.11",
+  "version": "0.1.0-alpha.0",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -28,10 +28,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@react-native-aria/focus": "^0.2.7",
     "@gluestack-ui/react-native-aria": "*",
-    "@gluestack-ui/ui-provider": "*",
     "@gluestack-ui/utils": "*",
+    "@react-native-aria/focus": "^0.2.7",
     "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
