--- a/tooltip/tsconfig.json
+++ b/tooltip/tsconfig.json
@@ -1,27 +1,11 @@
 {
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "example"
-  ],
+  "include": ["src"],
+  "exclude": ["node_modules", "example"],
   "paths": {
-    "@gluestack-ui/react-native-aria": [
-      "../react-native-aria/src"
-    ],
-    "@gluestack-ui/utils": [
-      "../utils/src"
-    ],
-    "@gluestack-ui/transitions": [
-      "../transitions/src"
-    ],
-    "@gluestack-ui/hooks": [
-      "../hooks/src"
-    ],
-    "@gluestack-ui/floating-ui": [
-      "../packages/floating-ui/src"
-    ]
+    "@gluestack-ui/react-native-aria": ["../react-native-aria/src"],
+    "@gluestack-ui/utils": ["../utils/src"],
+    "@gluestack-ui/transitions": ["../transitions/src"],
+    "@gluestack-ui/hooks": ["../hooks/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
@@ -34,10 +18,7 @@
     "importsNotUsedAsValues": "error",
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
