--- a/packages/actionsheet/package.json
+++ b/packages/actionsheet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/actionsheet",
-  "version": "0.1.11",
+  "version": "0.1.0",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -28,12 +28,12 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@react-native-aria/focus": "^0.2.7",
     "@gluestack-ui/hooks": "latest",
     "@gluestack-ui/overlay": "latest",
     "@gluestack-ui/react-native-aria": "latest",
     "@gluestack-ui/transitions": "latest",
-    "@gluestack-ui/utils": "latest"
+    "@gluestack-ui/utils": "latest",
+    "@react-native-aria/focus": "^0.2.7"
   },
   "peerDependencies": {
     "react": ">=16",
