--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "@dank-style/color-mode": "^0.1.0",
     "@dank-style/css-injector": "^0.1.0",
+    "@gluestack/design-system": "0.2.0",
     "@dank-style/react": "0.1.53",
-    "@floating-ui/react": "^0.19.0",
     "@gluestack/ui-compiled": "^0.1.0",
     "@react-native-aria/overlays": "0.3.5-rc.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
