--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -29,10 +29,10 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "@gluestack-ui/overlay": "*",
-    "@gluestack-ui/react-native-aria": "*",
-    "@gluestack-ui/toast": "*",
-    "@gluestack-ui/transitions": "^0.1.5",
+    "@gluestack-ui/overlay": "latest",
+    "@gluestack-ui/react-native-aria": "latest",
+    "@gluestack-ui/toast": "latest",
+    "@gluestack-ui/transitions": "latest",
     "tsconfig": "7",
     "typescript": "^4.9.4"
   },
