--- a/modal/tsconfig.json
+++ b/modal/tsconfig.json
@@ -1,33 +1,14 @@
 {
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "example"
-  ],
+  "include": ["src"],
+  "exclude": ["node_modules", "example"],
   "paths": {
-    "@gluestack-ui/react-native-aria": [
-      "../react-native-aria/src"
-    ],
-    "@gluestack-ui/utils": [
-      "../utils/src"
-    ],
-    "@gluestack-ui/transitions": [
-      "../transitions/src"
-    ],
-    "@gluestack-ui/hooks": [
-      "../hooks/src"
-    ],
-    "@univera11y/modal": [
-      "../modal/src"
-    ],
-    "@univera11y/icon": [
-      "../icon/src"
-    ],
-    "@gluestack-ui/overlay": [
-      "../overlay/src"
-    ]
+    "@gluestack-ui/react-native-aria": ["../react-native-aria/src"],
+    "@gluestack-ui/utils": ["../utils/src"],
+    "@gluestack-ui/transitions": ["../transitions/src"],
+    "@gluestack-ui/hooks": ["../hooks/src"],
+    "@univera11y/modal": ["../modal/src"],
+    "@univera11y/icon": ["../icon/src"],
+    "@gluestack-ui/overlay": ["../overlay/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
@@ -40,10 +21,7 @@
     "importsNotUsedAsValues": "error",
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
