--- a/transitions/tsconfig.json
+++ b/transitions/tsconfig.json
@@ -1,21 +1,10 @@
 {
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "example"
-  ],
+  "include": ["src"],
+  "exclude": ["node_modules", "example"],
   "paths": {
-    "@gluestack-ui/react-native-aria": [
-      "../react-native-aria/src"
-    ],
-    "@gluestack-ui/utils": [
-      "../utils/src"
-    ],
-    "@gluestack-ui/overlay": [
-      "../overlay/src"
-    ]
+    "@gluestack-ui/react-native-aria": ["../react-native-aria/src"],
+    "@gluestack-ui/utils": ["../utils/src"],
+    "@gluestack-ui/overlay": ["../overlay/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
@@ -28,10 +17,7 @@
     "importsNotUsedAsValues": "error",
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
