--- a/example/storybook/src/ui-components/Toast/package.json
+++ b/example/storybook/src/ui-components/Toast/package.json
@@ -28,7 +28,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@universa11y/toast": "0.1.1"
+    "@gluestack-ui/toast": "latest"
   },
   "peerDependencies": {
     "react": "*",
