--- a/example/storybook/src/ui-components/Input/package.json
+++ b/example/storybook/src/ui-components/Input/package.json
@@ -28,7 +28,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@universa11y/input": "0.1.1"
+    "@gluestack-ui/input": "latest"
   },
   "peerDependencies": {
     "react": "*",
