--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -33,6 +33,7 @@
     "expo": "^47.0.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "fs": "^0.0.1-security",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-native-safe-area-context": "^4.4.1",
