--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "packageManager": "yarn@1.22.17",
   "dependencies": {
-    "@gluestack/design-system": "^0.1.56"
+    "@gluestack-ui/tabs": "^0.1.0",
+    "@gluestack/design-system": "^0.2.21"
   }
 }
