fix: update cssinstyle

--- a/example/expo-app/package.json
+++ b/example/expo-app/package.json
@@ -25,7 +25,10 @@
     "source": "src",
     "output": "lib",
     "targets": [
-      "commonjs",
+      ["commonjs", {
+        "configFile": true
+
+      }],
       [
         "module",
         {
