--- a/example/expo-app/package.json
+++ b/example/expo-app/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@dank-style/babel-plugin-styled-resolver": "^0.1.1",
-    "@dank-style/react": "*",
+    "@dank-style/react": "^0.2.27",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -25,10 +25,12 @@
     "source": "src",
     "output": "lib",
     "targets": [
-      ["commonjs", {
-        "configFile": true
-
-      }],
+      [
+        "commonjs",
+        {
+          "configFile": true
+        }
+      ],
       [
         "module",
         {
