--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -32,6 +32,7 @@
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "fs": "^0.0.1-security",
+    "lucide-react-native": "^0.121.0",
     "prism-react-renderer": "^1.3.5",
     "prompts": "^2.4.2",
     "react-native-safe-area-context": "^4.4.1",
