--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@dank-style/react": "^0.1.46",
-    "@gluestack/design-system": "^0.1.62",
+    "@gluestack/design-system": "0.2.23",
     "@legendapp/motion": "^2.2.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
