--- a/packages/babel-plugin-styled-resolver/package.json
+++ b/packages/babel-plugin-styled-resolver/package.json
@@ -12,6 +12,9 @@
     "clean": "rm -rf lib",
     "dev:web": "cd example/native && yarn web --clear"
   },
+  "peerDependencies": {
+    "@dank-style/react": "latest"
+  },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/preset-env": "^7.20.2",
@@ -34,7 +37,6 @@
     "@babel/plugin-transform-typescript": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/traverse": "^7.20.5",
-    "@dank-style/cssify": "*",
     "lodash.merge": "^4.6.2"
   },
   "react-native-builder-bob": {
