--- a/example/expo-app/package.json
+++ b/example/expo-app/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-web": "^0.18.12"
   },
   "private": true,
   "react-native-builder-bob": {
