--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -19,8 +19,8 @@
     "create-story": "node ./scripts/create-story.js"
   },
   "dependencies": {
-    "@dank-style/react": "^0.1.46",
-    "@gluestack/design-system": "0.2.23",
+    "@dank-style/react": "*",
+    "@gluestack/design-system": "latest",
     "@legendapp/motion": "^2.2.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
