--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "target": "esnext"
   },
   "include": ["packages"],
-  "exclude": ["node_modules", "example/expo-app"]
+  "exclude": ["node_modules", "example"]
 }
