--- a/example/storybook/src/ui-components/Tabs/config.json
+++ b/example/storybook/src/ui-components/Tabs/config.json
@@ -1,4 +1,4 @@
 {
-  "dependencies": { "@universa11y/switch": "0.1.1" },
+  "dependencies": { "@gluestack-ui/switch": "0.1.1" },
   "keywords": ["components", "core"]
 }
