--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -21,7 +21,7 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@gluestack/design-system": "^0.3.4",
+    "@gluestack/design-system": "0.3.4",
     "@react-native-aria/overlays": "0.3.5-rc.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
