--- a/tabs/package.json
+++ b/tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/tabs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -30,6 +30,7 @@
   "dependencies": {
     "@gluestack-ui/utils": "latest",
     "@react-native-aria/focus": "^0.2.7",
+    "@gluestack-ui/react-native-aria": "0.1.1",
     "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
