--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,9 @@ jobs:
           node-version: 16.x
 
       - name: Install Dependencies
-        run: yarn
+        run: |
+          yarn
+          yarn build
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
