fix: build added for publishing

--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack/ui-storybook",
-  "private": false,
+  "private": true,
   "version": "0.1.0",
   "main": "index.js",
   "module": "lib/module/index",
