--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,9 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": [
+    "@gluestack/ui-storybook",
+    "@gluestack-ui/popper",
+    "@gluestack-ui/transitions"
+  ]
 }
