feat: test script

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "example/*"
   ],
   "scripts": {
+    "test": "bash ./scripts/test.sh",
     "dev": "turbo run dev",
     "build": "turbo run build --filter=@dank-style* --no-cache",
-    "test": "echo 1",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
     "release": "changeset publish",
