--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -61,6 +61,7 @@
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.18.10",
     "find-yarn-workspace-root": "^2.0.0",
+    "jest": "^29.5.0",
     "react-native-builder-bob": "^0.20.3",
     "storybook-dark-mode": "^2.0.4",
     "typescript": "4.9.4"
