--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.22",
     "@types/react-native": "^0.69.15",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "jest": "^29.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-native": "^0.70.3",
