--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dank-style/storybook",
+  "name": "example-storybook",
   "private": true,
   "version": "0.1.0",
   "main": "index.js",
