--- a/actionsheet/package.json
+++ b/actionsheet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/actionsheet",
-  "version": "0.1.3",
+  "version": "0.1.4-alpha.1",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -33,7 +33,7 @@
     "@gluestack-ui/react-native-aria": "latest",
     "@gluestack-ui/transitions": "latest",
     "@gluestack-ui/utils": "latest",
-    "@react-native-aria/dialog": "^0.1.0",
+    "@react-native-aria/dialog": "0.1.1",
     "@react-native-aria/focus": "^0.2.7"
   },
   "peerDependencies": {
