--- a/example/storybook/src/ui-components/AlertDialog/config.json
+++ b/example/storybook/src/ui-components/AlertDialog/config.json
@@ -1,4 +1,7 @@
 {
-  "dependencies": { "@gluestack-ui/alert-dialog": "^0.1.1" },
+  "dependencies": {
+    "@gluestack-ui/alert-dialog": "^0.1.1",
+    "@legendapp/motion": "latest"
+  },
   "keywords": ["components", "core"]
 }
