fix: specificity issue of margin and padding

--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -19,6 +19,7 @@
     "create-story": "node ./scripts/create-story.js"
   },
   "dependencies": {
+    "@dank-style/animation-plugin": "^0.0.4",
     "@dank-style/react": "*",
     "@gluestack/design-system": "latest",
     "@legendapp/motion": "^2.2.0",
@@ -41,7 +42,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@dank-style/react": "0.3.13",
+    "@dank-style/animation-plugin": "^0.0.4",
+    "@dank-style/react": "^0.3.13",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-controls": "^6.5.14",
     "@storybook/addon-docs": "^6.5.15",
